src/ty/snapshots/tvm__ty__tests__bad_binary_add.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n    10 + \"test\";\n  \"#)"
---
error: type error
1 |  10 + "test";
  |  ^^^^^^^^^^^

